# machinist-ui-test

./: README.md  config.py  options.py  pyproject.toml
.github/workflows/: test.yml
acceptance-Gifs/: README.md
tests/: conftest.py  test_accounts.py  test_add_start_node.py  test_bugs.py  test_create_an_account.py  test_file_storage.py  test_labels_present.py  test_machinist.py  test_my_project.py  test_nodes.py  test_run_inputs.py  test_signup.py  test_transitions.py  utils.py
