[tool.poetry]
name = "machinist-ui-test"
version = "0.1.0"
description = "GUI testing for machinist-ui"
authors = ["Ethan <ebenabou@ineat.ca>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
flake8 = "^4.0.1"
black = "^21.11b1"
mypy = "^0.910"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
